--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>ACDuino web client</title>
-
     <!-- Main meta tags -->
     <meta name="description" content="">
     <meta name="author" content="Tomáš Vondra">
@@ -24,7 +23,7 @@
             <div class="text-center">
                 <h3 class="mb-3">Login</h3>
                 <div class="alert alert-danger alert-dismissible text-left fade" role="alert">
-                    Vaše přihlašovací údaje <strong>nejsou správné</strong>
+                    <span id="errorText">Vaše přihlašovací údaje <strong>nejsou správné</strong></span>
                     <button type="button" class="close" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -32,47 +31,22 @@
                 <div class="form-group">
                     <label for="username">Uživatelské jméno</label>
                     <input type="text" class="form-control text-center" id="username"
-                           placeholder="Zadejte uživatelské jméno">
+                           placeholder="Zadejte uživatelské jméno" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Heslo</label>
                     <input type="password" class="form-control text-center" id="password"
-                           placeholder="Heslo">
+                           placeholder="Heslo" required>
                 </div>
                 <button id="loginBtn" class="btn btn-primary" data-toggle="alert">Přihlásit se</button>
             </div>
         </div>
     </div>
 </div>
+<script src="assets/js/main.js"></script>
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $(".alert").hide();
-        $("#loginBtn").click(function () {
-            var credentials = {username: $("#username").val(), password: $("#password").val()};
-            console.log(credentials);
-            $.ajax({
-                url: 'http://localhost:8080/login',
-                type: 'post',
-                contentType: 'application/json',
-                data: JSON.stringify(credentials)
-            }).done(function (response, status, xhr) {
-                var authToken = xhr.getResponseHeader("Authorization");
-                document.cookie = "Authorization=" + authToken;
-                window.location.replace("administration.html");
-            }).fail(function (response) {
-                $(".alert").addClass("show");
-                $(".alert").show();
-            });
-        });
-
-        $('.alert .close').on('click', function (e) {
-            $(this).parent().hide();
-        });
-    });
-
-</script>
+<script src="assets/js/index.js"></script>
 </body>
 
 </html>
