Client refactor + comment arduino code

--- a/www/administration.html
+++ b/www/administration.html
@@ -40,7 +40,7 @@
 
                     <div id="clientConnectFailed" class="alert alert-danger alert-dismissible text-left fade"
                          role="alert">
-                        Nepodařilo se připojit k zařízení
+                        <span>Nepodařilo se připojit k zařízení</span>
                         <button type="button" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -48,8 +48,8 @@
 
                     <div id="clientConnectSucess" class="alert alert-success alert-dismissible text-left fade"
                          role="alert">
-                        Podařilo se úspěšně připojit k zařízení
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span>Podařilo se úspěšně připojit k zařízení</span>
+                        <button type="button" class="close" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
@@ -70,6 +70,7 @@
                         <th scope="col">IP adresa</th>
                         <th scope="col">Jméno zařízení</th>
                         <th scope="col">Popis</th>
+                        <th scope="col">Akce</th>
                     </tr>
                     </thead>
                     <tbody>
